--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.4",
+    "axios": "^1.10.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.517.0",
     "next": "15.3.3",
