--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.517.0",
     "next": "15.3.3",
+    "openai": "^5.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0"
