--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.81.4",
     "axios": "^1.10.0",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^11.10.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.517.0",
